# simgrid-pcad

./: CMakeLists.txt  Makefile  README.org  RR-notes.org  base.cpp  cei.txt  create-pcad-NEW.cpp  create-pcad-nodes.cpp  create-pcad.cpp  draco.txt  flake.nix  poti.txt  tupi.txt
ERAD/: refs.bib  sbc.bbl  sbc.org  sbc.tex
data/hpl/: get-results-hpl.sh  hpl-results.csv
data/hpl/cei1-hpl-05-02-2026-1770317538/: cei11770317538.out  cei11770321134.out  cei11770324738.out  cei11770328283.out  cei11770331831.out  cei11770335381.out  cei11770338920.out  cei11770342451.out  cei11770345983.out  cei11770349513.out
data/hpl/cei4-hpl-05-02-2026-1770318511/: cei41770318511.out  (+9 more)
data/iperf3/: cei2_calibracao_757514.out  cei4_calibracao_757515.out  create_csv.sh  draco3_calibracao_757516.out  draco3_calibracao_757517.out  iperf-results.csv  poti1_calibracao_757512.out  poti3_calibracao_757513.out  tupi3_calibracao_757510.out  tupi3_calibracao_757511.out
data/ping/: cei2_ping_757643.out  cei4_ping_757644.out  create_csv.sh  draco2_ping_757645.out  draco4_ping_757646.out  ping_data.csv  poti1_ping_757641.out  poti3_ping_757642.out  tupi1_ping_757647.out  tupi1_ping_757648.out
data/validation/: real_results.csv  sim_results.csv
guix/: channels.scm  manifest.scm
nix/: flake.nix
paper/: sbc.org  sbc.tex
projects/: cei.csv
schnotes/: Schnotes-polluted-by-rayan.org  Schnotes.org
schnotes/rastros/: rastro-longer-sim-comd.csv  rastro-sim-minivite64.csv
scripts/: create-csv-hpl.sh  parse-validation.sh  run-hpl.sh  run-sim.sh  sim.slurm
slurm/: hpl.slurm
(+7930 files in other folders)
